--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ cffi==1.14.4
 chardet==3.0.4
 click==7.1.2
 firebase-admin==4.5.0
-Flask==1.1.2
 google-api-core==1.23.0
 google-api-python-client==1.12.8
 google-auth==1.24.0
@@ -28,10 +27,17 @@ protobuf==3.14.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
-pytz==2020.4
-requests==2.25.0
+requests
 rsa==4.6
 six==1.15.0
 uritemplate==3.0.1
 urllib3==1.26.2
-Werkzeug==1.0.1
+Flask==2.0.2
+Werkzeug
+Flask-SQLAlchemy==3.0.1
+Flask-WTF==1.0.0
+psycopg2==2.9.3
+WTForms==3.0.0
+requests==2.26.0
+pytz==2021.3
+email-validator==1.1.3
